# adskiller

./: .gitignore  CMakeLists.txt  README.md  adskiller.rc  clang-format.sh  resources.qrc  update.qrc  update.rc
.github/workflows/: cmake-multi-platform.yml
Resources/: AdskillerResouces.qrc  PixelBlastGameRes.qrc
Resources/PixelBlastGame/: PixelBlastGameRes.qrc
Resources/res/strings/: en_utf8
Resources/res/style/: metro-blue-dark.qss
include/: AntiMalware.h  AppSystemTray.h  ProgressCircle.h  Snowflake.h  Strings.h  SystemTray.h  adbcmds.h  adbtrace.h  begin.h  extension.h  network.h  packages.h
res/: icons-pages.xcf
res/strings/: ru_utf8
res/style/: Gravira.qss  metro-blue-dark.qss  metro-blue.qss
src/: 3rdDots.cpp  AppSystemTray.cpp  Identity.cpp  ProgressWindow.cpp  SystemTray.cpp  adbtrace.cpp  extension.cpp  main.cpp  malwareProcess.cpp  network.cpp  packages.cpp  settings.cpp  task.cpp  user_identity.cpp
src/common/adbfront/: CMakeLists.txt
src/common/adbfront/include/: adbcmds.h  adbfront.h
src/common/adbfront/src/: adbfront.cpp  adbshell.cpp  adbshell.std.cpp  adbtrace.cpp
src/pixelblastsrc/: CMakeLists.txt  PixelBlastGame.cpp  PixelSoundManager.cpp
src/pixelblastsrc/Resources/: PixelBlastGameRes.qrc
src/pixelblastsrc/include/: PixelBlastGame.h  PixelSoundManager.h
src/services/: CMakeLists.txt  Service.Actions.cpp  Service.Adskill.cpp  Service.Adskiller.cpp  Service.Base.cpp  Service.BoostRam.cpp  Service.BuyVIP.cpp  Service.ContactFixer.cpp  Service.MiDeviceUnlock.cpp  Service.MyDevices.cpp  Service.StorageCacheClean.cpp  Services.h
src/widget/: ProgressCircle.cpp  Snowflake.cpp
src/widgets/: CMakeLists.txt  PixelBlastGame.cpp  ProgressCircle.cpp  Snowflake.cpp  TetrisGame.cpp
src/widgets/Include/: PixelBlastGame.h  PixelBlastShapes.h  ProgressCircle.h  Snowflake.h  TetrisGame.h
ui/: icontextbutton.cpp  icontextbutton.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  update_window.cpp  update_window.h  update_window.ui
update/: UpdateManager.h  main.cpp  updatemanager.cpp
